--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="about-grid fade-in">
                 <div class="about-img">
-                    <img src="asset/profile.JPG" alt="Artha Syarif Athaya">
+                    <img src="asset/profile.webp" alt="Artha Syarif Athaya">
                 </div>
                 <div class="about-text">
                     <h5
@@ -160,6 +160,33 @@
                     <div class="eqsl-overlay"><div class="eqsl-info"><strong>(Call sign verif)</strong><small>USA • DMR • 70cm</small></div></div>
                 </div>
                 -->
+                <div class="eqsl-item">
+  <img src="asset/eQSL/yd2ogd.webp" alt="eQSL">
+  <div class="eqsl-overlay">
+    <div class="eqsl-info">
+      <strong>YD2OGD</strong>
+      <small>Indonesia • DMR • 70cm</small>
+    </div>
+  </div>
+</div>
+                <div class="eqsl-item">
+  <img src="asset/eQSL/VU3GZR.webp" alt="eQSL">
+  <div class="eqsl-overlay">
+    <div class="eqsl-info">
+      <strong>VU3GZR</strong>
+      <small>India • DMR • 70cm</small>
+    </div>
+  </div>
+</div>
+                <div class="eqsl-item">
+  <img src="asset/eQSL/DN9AZ.webp" alt="eQSL">
+  <div class="eqsl-overlay">
+    <div class="eqsl-info">
+      <strong>DN9AZ</strong>
+      <small>Germany • DMR • 70cm</small>
+    </div>
+  </div>
+</div>
                 <div class="eqsl-item">
                     <img src="asset/eQSL/ZS6RAY.webp" alt="eQSL">
                     <div class="eqsl-overlay">
