--- a/index.html
+++ b/index.html
@@ -161,6 +161,15 @@
                 </div>
                 -->
                 <div class="eqsl-item">
+  <img src="asset/eQSL/EA8DFX.webp" alt="eQSL">
+  <div class="eqsl-overlay">
+    <div class="eqsl-info">
+      <strong>EA8DFX</strong>
+      <small>Spanyol • DMR • 70cm</small>
+    </div>
+  </div>
+</div>
+                <div class="eqsl-item">
   <img src="asset/eQSL/yd2ogd.webp" alt="eQSL">
   <div class="eqsl-overlay">
     <div class="eqsl-info">
