--- a/index.html
+++ b/index.html
@@ -161,41 +161,113 @@
                 </div>
                 -->
                 <div class="eqsl-item">
-  <img src="asset/eQSL/EA8DFX.webp" alt="eQSL">
-  <div class="eqsl-overlay">
-    <div class="eqsl-info">
-      <strong>EA8DFX</strong>
-      <small>Spanyol • DMR • 70cm</small>
-    </div>
-  </div>
-</div>
+                    <img src="asset/eQSL/TI2MCS 2.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>TI2MCS</strong>
+                            <small>Costa Rica • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
                 <div class="eqsl-item">
-  <img src="asset/eQSL/yd2ogd.webp" alt="eQSL">
-  <div class="eqsl-overlay">
-    <div class="eqsl-info">
-      <strong>YD2OGD</strong>
-      <small>Indonesia • DMR • 70cm</small>
-    </div>
-  </div>
-</div>
+                    <img src="asset/eQSL/TI2MCS 1.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>TI2MCS</strong>
+                            <small>Costa Rica • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
                 <div class="eqsl-item">
-  <img src="asset/eQSL/VU3GZR.webp" alt="eQSL">
-  <div class="eqsl-overlay">
-    <div class="eqsl-info">
-      <strong>VU3GZR</strong>
-      <small>India • DMR • 70cm</small>
-    </div>
-  </div>
-</div>
+                    <img src="asset/eQSL/PU2VSO.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>PU2VSO</strong>
+                            <small>Brazil • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
                 <div class="eqsl-item">
-  <img src="asset/eQSL/DN9AZ.webp" alt="eQSL">
-  <div class="eqsl-overlay">
-    <div class="eqsl-info">
-      <strong>DN9AZ</strong>
-      <small>Germany • DMR • 70cm</small>
-    </div>
-  </div>
-</div>
+                    <img src="asset/eQSL/PD3AL.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>PD3AL</strong>
+                            <small>Netherlands • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/KW4LAM.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>KW4LAM</strong>
+                            <small>USA • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/KM6MTV.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>KM6MTV</strong>
+                            <small>USA • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/IT9FNO.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>IT9FNO</strong>
+                            <small>Italy • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/EA3BDE.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>EA3BDE</strong>
+                            <small>Spain • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/EA8DFX.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>EA8DFX</strong>
+                            <small>Spanyol • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/yd2ogd.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YD2OGD</strong>
+                            <small>Indonesia • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/VU3GZR.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>VU3GZR</strong>
+                            <small>India • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/DN9AZ.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>DN9AZ</strong>
+                            <small>Germany • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
                 <div class="eqsl-item">
                     <img src="asset/eQSL/ZS6RAY.webp" alt="eQSL">
                     <div class="eqsl-overlay">
