--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                     YG1BTK
                     <span>AMATEUR RADIO STATION</span>
                 </div>
+
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#registered">Verified</a></li>
                     <li><a href="#eqsl">eQSL</a></li>
+                    <li><a href="#awards">Awards</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -160,6 +162,286 @@
                     <div class="eqsl-overlay"><div class="eqsl-info"><strong>(Call sign verif)</strong><small>USA • DMR • 70cm</small></div></div>
                 </div>
                 -->
+
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/W9TRO.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>W9TRO</strong>
+                            <small>USA • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/W3LEL.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>W3LEL</strong>
+                            <small>USA • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/VK2GAP.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>VK2GAP</strong>
+                            <small>Australia • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/HJ3ZOM.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>HJ3ZOM</strong>
+                            <small>Colombia • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/YC2KNA.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YC2KNA</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/E79KO.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>E79KO</strong>
+                            <small>Bosnia and Herzegovina • DMR • 70cm</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/YH2YOG 2.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YH2YOG</strong>
+                            <small>Indonesia • SSB • 80m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/YH2YOG 1.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YH2YOG</strong>
+                            <small>Indonesia • SSB • 80m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/YH2JIM 3.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YH2JIM</strong>
+                            <small>Indonesia • SSB • 80m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/YH2JIM 2.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YH2JIM</strong>
+                            <small>Indonesia • SSB • 80m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/YH2JIM 1.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YH2JIM</strong>
+                            <small>Indonesia • SSB • 80m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/YH0ONN 1.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YH0ONN</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/YF4SDF.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YF4SDF</strong>
+                            <small>Indonesia • SSB • 80m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/YC4FVP.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>YC4FVP</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/14. 8A141RDS.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A141RDS</strong>
+                            <small>Indonesia • SAT-FM • 2m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/13. 8A141RDS.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A141RDS</strong>
+                            <small>Indonesia • SSB • 80m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/12. 8A141RDS.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A141RDS</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/11. 8A141RDS.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A141RDS</strong>
+                            <small>Indonesia • SSB • 10m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/10. 8A141RDS.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A141RDS</strong>
+                            <small>Indonesia • FT8 • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/9. 8A141RDS.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A141RDS</strong>
+                            <small>Indonesia • CW • 80m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/8I4ABD.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8I4ABD</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/8C67NBK.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8C67NBK</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/8C67NBJ.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8C67NBJ</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/8C67NBF.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8C67NBF</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/8C67NBC.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8C67NBC</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/8A770LMJ.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A770LMJ</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/8A54KB 2.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A54KB</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/8A54KB 1.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A54KB</strong>
+                            <small>Indonesia • SSB • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/8. 8A141RDS.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A141RDS</strong>
+                            <small>Indonesia • CW • 40m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/6. 8A141RDS.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A141RDS</strong>
+                            <small>Indonesia • CW • 15m</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="eqsl-item">
+                    <img src="asset/eQSL/5. 8A141RDS.webp" alt="eQSL">
+                    <div class="eqsl-overlay">
+                        <div class="eqsl-info">
+                            <strong>8A141RDS</strong>
+                            <small>Indonesia • CW • 10m</small>
+                        </div>
+                    </div>
+                </div>
                 <div class="eqsl-item">
                     <img src="asset/eQSL/TI2MCS 2.webp" alt="eQSL">
                     <div class="eqsl-overlay">
@@ -702,6 +984,57 @@
                 </div>
 
 
+            </div>
+        </div>
+    </section>
+
+
+    <!--Award-->
+    <section id="awards" class="section-padding" style="background: var(--bg-dark);">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-title">Awards & Certificates</h2>
+                <p class="section-subtitle">Recognition and achievements in amateur radio activities.</p>
+            </div>
+            <div class="awards-grid fade-in">
+                <!--Dibawah ini taronya-->
+                
+                <div class="award-card">
+                    <div class="award-img">
+                        <img src="asset/Award/4. 8A141RDS Platinum.webp" alt="Award">
+                    </div>
+                    <div class="award-info">
+                        <h4>Raden Dewi Sartika Award 2025</h4>
+                        <p>In recognition and dedication for 8A141RDS - Platinum Class Achievement.</p>
+                    </div>
+                </div>
+                <div class="award-card">
+                    <div class="award-img">
+                        <img src="asset/Award/3. 8A141RDS Gold.webp" alt="Award">
+                    </div>
+                    <div class="award-info">
+                        <h4>Raden Dewi Sartika Award 2025</h4>
+                        <p>In recognition and dedication for 8A141RDS - Gold Class Achievement.</p>
+                    </div>
+                </div>
+                <div class="award-card">
+                    <div class="award-img">
+                        <img src="asset/Award/2. 8A141RDS Silver.webp" alt="Award 1">
+                    </div>
+                    <div class="award-info">
+                        <h4>Raden Dewi Sartika Award 2025</h4>
+                        <p>In recognition and dedication for 8A141RDS - Silver Class Achievement.</p>
+                    </div>
+                </div>
+                <div class="award-card">
+                    <div class="award-img">
+                        <img src="asset/Award/1. 8A141RDS Bronze.webp" alt="Award 1">
+                    </div>
+                    <div class="award-info">
+                        <h4>Raden Dewi Sartika Award 2025</h4>
+                        <p>In recognition and dedication for 8A141RDS - Bronze Class Achievement.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
