--- a/index.html
+++ b/index.html
@@ -120,13 +120,12 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-title">Live Logbook</h2>
-                <p class="section-subtitle">Data komunikasi radio terbaru yang tercatat di stasiun YG1BTK.</p>
+                <p class="section-subtitle">Real-time radio contacts and on-air status.</p>
             </div>
 
             <div class="hrdlog-wrapper fade-in">
-                <div id="hrdlog-oa" style="margin-bottom: 15px;">&nbsp;</div>
-
-                <div id="hrdlog_qrb">Loading logbook data...</div>
+                <div id="hrdlog-oa" style="text-align:center; margin-bottom: 10px;">&nbsp;</div>
+                <div id="hrdlog_qrb" style="width: 100%; min-height: 300px;">www.hrdlog.net</div>
             </div>
         </div>
     </section>
@@ -1179,7 +1178,7 @@
             <p style="margin-top:5px; color:var(--tech-cyan);">Member of ORARI Daerah Jawa Barat</p>
         </div>
     </footer>
-
+    
     <!--HRD Log.net-->
     <script type="text/javascript" src="https://www.hrdlog.net/hrdlog.js"></script>
     <script type="text/javascript">
@@ -1191,9 +1190,9 @@
             ohrdlog_qrb.ShowTopQrb();
             ohrdlog_qrb.LoadByCallsign();
             ohrdlog_qrb.EnableBandSlots();
-            ohrdlog_qrb.SetColors('#0ea5e9','#FFFFFF','#020617');
+            ohrdlog_qrb.SetColors('#0ea5e9', '#FFFFFF', '#FFFFFF');
             ohrdlog_qrb.LoadLastQso(10);
-            ohrdlog_qrb.EnableQsoMap(0);
+            ohrdlog_qrb.EnableQsoMap(500);
             ohrdlog_qrb.DisableLinks();
 
             // Interval On-Air
@@ -1201,7 +1200,7 @@
         };
     </script>
     <script src="app.js"></script>
-
+    
 </body>
 
 </html>
