--- a/index.html
+++ b/index.html
@@ -120,12 +120,13 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-title">Live Logbook</h2>
-                <p class="section-subtitle">Real-time radio contacts and on-air status.</p>
+                <p class="section-subtitle">Data komunikasi radio terbaru yang tercatat di stasiun YG1BTK.</p>
             </div>
 
             <div class="hrdlog-wrapper fade-in">
-                <div id="hrdlog-oa" style="text-align:center; margin-bottom: 10px;">&nbsp;</div>
-                <div id="hrdlog_qrb" style="width: 100%; min-height: 300px;">www.hrdlog.net</div>
+                <div id="hrdlog-oa" style="margin-bottom: 15px;">&nbsp;</div>
+
+                <div id="hrdlog_qrb">Loading logbook data...</div>
             </div>
         </div>
     </section>
@@ -1178,7 +1179,7 @@
             <p style="margin-top:5px; color:var(--tech-cyan);">Member of ORARI Daerah Jawa Barat</p>
         </div>
     </footer>
-    
+
     <!--HRD Log.net-->
     <script type="text/javascript" src="https://www.hrdlog.net/hrdlog.js"></script>
     <script type="text/javascript">
@@ -1200,7 +1201,7 @@
         };
     </script>
     <script src="app.js"></script>
-    
+
 </body>
 
 </html>
